# kuka_iiwa_interface_ros2

./: .gitignore
victor_control/config/: victor_control.yaml
victor_description/urdf/: iiwa7.xacro  robotiq_3finger_gripper.xacro  victor.urdf  victor.urdf.xacro
victor_fake_hardware_interface/: README.md
victor_fake_hardware_interface/launch/: fake_dual_arm_lcm_bridge.launch
victor_fake_hardware_interface/src/victor_fake_hardware_interface/: minimal_fake_arm_interface.py
victor_hardware/scripts/: arm_wrench_republisher.py
victor_hardware_interface/: CMakeLists.txt  play_trajectory.py
victor_hardware_interface/SunriseWorkspace/UofMR1_2017_RightUpper/src/armlab/lcm/robotInterface/: LCMRobotInterface.java
victor_hardware_interface/include/victor_hardware_interface/: iiwa_hardware_interface.hpp  minimal_arm_wrapper_interface.hpp
victor_hardware_interface/launch/: dual_arm_lcm_bridge.launch
victor_hardware_interface/scripts/: arm_command_gui.py  arm_command_gui_prints.py  joint_state_publisher_alt.py  joint_state_publisher_hardc.py
victor_hardware_interface/src/victor_hardware_interface/: iiwa_hardware_interface.cpp  minimal_arm_wrapper_interface.cpp  victor_utils.py
victor_hardware_interface_msgs/: CMakeLists.txt  package.xml
victor_ikfast_plugins/victor_ikfast_left_arm_plugin/: CMakeLists.txt
victor_ikfast_plugins/victor_ikfast_right_arm_plugin/: CMakeLists.txt
victor_moveit_config/config/: sensors_kinect_tripodA.yaml  victor.srdf
victor_moveit_config/launch/: move_group.launch  sensor_manager.launch.xml  victor_moveit_sensor_manager.launch.xml
