<?xml version="1.0"?>
<package>
  <name>victor_hardware_interface_msgs</name>
  <version>0.0.0</version>
  <description>The victor_hardware_interface_msgs package</description>

  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <author email="dmcconac@umich.edu">Dale McConachie</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
